--- a/ch06/town_hall/styles/main.css
+++ b/ch06/town_hall/styles/main.css
@@ -116,3 +116,15 @@ footer {
 .large {
 	font-size: 125%;
 }
+.speaker{
+	h1{
+		color: var(--accent-color);
+	}
+	h2{
+		color: black;
+	}
+	p{
+		padding-top: .5em;
+		padding-bottom: .5em;
+	}
+}
