--- a/ch15/students/styles/main.css
+++ b/ch15/students/styles/main.css
@@ -1,25 +1,29 @@
-* {
-    margin: 0;
-    padding-bottom: 1em;
+@layer default{
+    * {
+        margin: 0;
+        padding-bottom: 1em;
+    }
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 90%;
+        width: min(90%, 800px);
+        margin: 1em auto;
+    }
+    h2 {
+        font-size: 150%;
+    }
+    ul, li, h2 {
+        padding-bottom: .5em;
+    }
 }
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 90%;
-    width: min(90%, 800px);
-    margin: 1em auto;
-}
-h2 {
-    font-size: 150%;
-}
-ul, li, h2 {
-    padding-bottom: .5em;
-}
-img {
-    width: min(100%, 750px);
-}
-footer h2 {
-    text-align: center;
-    font-size: 90%;
+@layer page{
+    img {
+        width: min(100%, 750px);
+    }
+    footer h2 {
+        text-align: center;
+        font-size: 90%;
+    }    
 }
 
 @media screen and (max-width: 600px) {
